--- a/html/main.html
+++ b/html/main.html
@@ -3,58 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voice Recorder</title>
+    <title>Real-time Voice Recognizer</title>
 </head>
 <body>
-    <h1>Voice Recorder</h1>
-    <button id="startRecord">Start Recording</button>
-    <button id="stopRecord" disabled>Stop Recording</button>
-    <input type="text" id="saveLocation" placeholder="Enter file name (e.g., audio.mp3)">
-    <button id="saveAudio" disabled>Save as MP3</button>
+    <h1>Real-time Voice Recognizer</h1>
+    <button id="startRecognition">Start Recognition</button>
+    <button id="stopRecognition" disabled>Stop Recognition</button>
+    <p id="recognizedText"></p>
 
     <script>
-        let mediaRecorder;
-        let audioChunks = [];
+        let recognition;
 
-        document.getElementById('startRecord').addEventListener('click', async () => {
-            try {
-                const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-                mediaRecorder = new MediaRecorder(stream);
+        document.getElementById('startRecognition').addEventListener('click', () => {
+            // Initialize SpeechRecognition object
+            recognition = new webkitSpeechRecognition(); // For Chrome
+            // recognition = new SpeechRecognition(); // For other browsers
 
-                mediaRecorder.ondataavailable = (event) => {
-                    if (event.data.size > 0) {
-                        audioChunks.push(event.data);
-                    }
-                };
+            recognition.lang = 'en-US'; // Set the language to English
 
-                mediaRecorder.onstop = () => {
-                    const audioBlob = new Blob(audioChunks, { type: 'audio/wav' });
-                    document.getElementById('saveAudio').disabled = false;
+            recognition.onstart = () => {
+                console.log('Recognition started.');
+                document.getElementById('startRecognition').disabled = true;
+                document.getElementById('stopRecognition').disabled = false;
+            };
 
-                    document.getElementById('saveAudio').addEventListener('click', () => {
-                        const fileName = document.getElementById('saveLocation').value || 'recorded_audio.mp3';
-                        const a = document.createElement('a');
-                        a.href = URL.createObjectURL(audioBlob);
-                        a.download = fileName;
-                        a.style.display = 'none';
-                        document.body.appendChild(a);
-                        a.click();
-                        document.body.removeChild(a);
-                    });
-                };
+            recognition.onresult = (event) => {
+                const result = event.results[event.results.length - 1][0].transcript;
+                document.getElementById('recognizedText').textContent = result;
+            };
 
-                mediaRecorder.start();
-                document.getElementById('startRecord').disabled = true;
-                document.getElementById('stopRecord').disabled = false;
-            } catch (error) {
-                console.error('Error accessing the microphone:', error);
-            }
+            recognition.onend = () => {
+                console.log('Recognition ended.');
+                document.getElementById('startRecognition').disabled = false;
+                document.getElementById('stopRecognition').disabled = true;
+            };
+
+            recognition.onerror = (event) => {
+                console.error('Recognition error:', event.error);
+            };
+
+            recognition.start();
         });
 
-        document.getElementById('stopRecord').addEventListener('click', () => {
-            mediaRecorder.stop();
-            document.getElementById('startRecord').disabled = false;
-            document.getElementById('stopRecord').disabled = true;
+        document.getElementById('stopRecognition').addEventListener('click', () => {
+            if (recognition) {
+                recognition.stop();
+                console.log('Recognition stopped.');
+                document.getElementById('startRecognition').disabled = false;
+                document.getElementById('stopRecognition').disabled = true;
+            }
         });
     </script>
 </body>
