--- a/html/main.html
+++ b/html/main.html
@@ -80,8 +80,7 @@
                 });
 
             function sendRecognitionResult() {
-                console.log(document.querySelector("#recognizedText"))
-                past_msg = document.querySelector("#recognizedText")
+                past_msg = document.querySelector("#recognizedText").innerHTML
                 const xhr = new XMLHttpRequest();
                 xhr.open("POST", "http://localhost:8888/"); 
                 xhr.setRequestHeader("Content-Type", "application/json");
