--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="src/assets/book.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>This is my app!</title>
+    <title>Banter | Learn Math Hands-Free!</title>
   </head>
   <body>
     <div id="root"></div>
