--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="src/assets/book.png" />
+    <link rel="icon" type="image/svg+xml" href="public/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banter | Learn Math Hands-Free!</title>
   </head>
